--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ authors = ["tummychow <tummychow@users.noreply.github.com>"]
 [dependencies]
 git2 = "~0.6"
 clap = "~2.30"
+slog = "~2.1"
+slog-term = "~2.3"
+slog-async = "~2.2"
