use upstream repo with fix
upstream accepted my patch, let's go back to using their repo. (honestly
the reason i'm doing this is i deleted my fork and forgot i was
referencing it here...)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ failure = "~0.1"
 memchr = "~2.0"
 
 [patch.crates-io]
-slog-term = { git = "https://github.com/tummychow/term", branch = "fallback-no-color" }
+slog-term = { git = "https://github.com/slog-rs/term", rev = "1a1f6ecaec82c6ade58806e6b315a1e888d9c2b4" }
 
 [dev-dependencies]
 tempdir = "~0.3"
