--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,8 @@ clap = "~2.33"
 slog = "~2.5"
 slog-term = "~2.6"
 slog-async = "~2.5"
-failure = "~0.1"
 memchr = "~2.3"
+anyhow = "~1.0"
 
 [dev-dependencies]
 tempfile = "~3.1"
