--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: cargo build --verbose
+      run: cargo build --release --verbose
     - name: Run tests
       run: cargo test --verbose
     - name: Upload artifact
@@ -22,5 +22,5 @@ jobs:
       with:
         name: git-absorb-${{ matrix.os }}
         path: |
-          target/debug/git-absorb
-          target/debug/git-absorb.exe
+          target/release/git-absorb
+          target/release/git-absorb.exe
