Build man page as part of workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,3 +31,21 @@ jobs:
       - uses: actions/checkout@v4
       - name: Check format
         run: cargo fmt --check
+
+  build-man-page:
+    name: build-man-page
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup environment
+        run: |
+          sudo apt-get update
+          sudo apt-get --assume-yes --no-install-recommends install asciidoc
+      - name: Build from asciidoc
+        working-directory: ./Documentation
+        run: make
+      - name: Upload man page as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          path: Documentation/git-absorb.1
+          name: git-absorb.1
