Check INFO+ log output in existing tests
We're about to make some changes to log messages,
so let's first see what we're logging to ensure
we don't break anything.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,4 +38,7 @@ memchr = "2.3"
 anyhow = "1.0"
 
 [dev-dependencies]
+iobuffer = "0.2.0"
+serde_json = "1.0.140"
+slog-extlog = "8.1.0"
 tempfile = "3.1"
